@@ -120,6 +120,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkButton.html">GtkButton</a> con
 <tr><td class="wiki"> space-fill </td><td class="wiki"> Pack widget filling space </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> 0.7.21 </td></tr>
 <tr><td class="wiki"> block-function-signals </td><td class="wiki"> Block signal emissions from functions </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> 0.7.21 </td></tr>
 <tr><td class="wiki"> image-position<sup><a href="#note1">[1]</a></sup> </td><td class="wiki"> Image position relative to label </td><td class="wiki"> <code>0</code>, <code>1</code>, <code>2</code>, <code>3</code> (left, right, top, bottom) </td><td class="wiki"> 0.7.21 </td></tr>
+<tr><td class="wiki"> homogeneous </td><td class="wiki"> Horizontal uniformity of an image with label </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> 0.8.1 </td></tr>
 </table>
 
 <h2> Directives </h2>
@@ -226,7 +227,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkButton.html">GtkButton</a> con
 						<td>
 							<table width="100%" cellpadding="0px" cellspacing="0px">
 								<tr>
-									<td class="footer" width="33%" align="center">2012-08-18 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
+									<td class="footer" width="33%" align="center">2012-08-20 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
 									<td class="footer" width="33%" align="center"><a href="http://code.google.com/p/gtkdialog/">Project Page</a></td>
 									<td class="footer" width="33%" align="center"><a href="http://www.murga-linux.com/puppy/viewtopic.php?t=69188">Development Thread</a></td>
 								</tr>
